ONPA github pages

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ header{
     justify-content: center;
     align-items: center;
     color: #fff;
-    background:  url(../ONPA/imgs/);
+    background:  url(../ONPA/imgs/Design_sem_nome__10_.png);
     background-size: cover;
     background-blend-mode: screen;
     background-attachment: fixed;
