--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 .header1{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+    
+    padding: 20px 150px 0px 85px;
     align-items: center;
     font-size: 20px;
 }
@@ -10,7 +12,7 @@
     font-size: 15px;
     flex-direction: row;
     justify-content: space-around;
-    margin-top: 35px;
+    margin-top: 10px;
     border-bottom-width:solid 5px ;
     border-color:  black;
 
@@ -40,17 +42,20 @@ header input{
 
 header{
     border-bottom: solid grey;
-    border-width: 1px;
+   
     font-weight: bold;
     background-color: rgb(68, 63, 63);
     
     
 }
 
+
+
 .s1 {
     width: 1349px;
     height: 500px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     color: #fff;
@@ -61,10 +66,22 @@ header{
 }
 
 .s1 h1{
-    background-color: rgba(0, 0, 0, 0.75);
+    background-color: rgba(0, 0, 0, 0.534);
     font-weight: 900;
     padding: 15px 20px 10px 20px;
     text-transform: uppercase;
+}
+
+.BS{
+    background-color: rgba(0, 0, 0, 0.534);
+    font-weight: 900;
+    padding: 15px 20px 10px 20px;
+    margin: 20px;
+    text-transform: uppercase;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center ;
 }
 
 
@@ -87,7 +104,7 @@ main{
     justify-content: center;
     align-items: center;
     
-    background-color: rgba(0, 0, 0, 0.877);
+    background-color: rgba(0, 0, 0, 0.712);
 }
 
 .s2 h1{
@@ -141,15 +158,15 @@ footer{
     justify-content: center;
     background-color: rgb(68, 63, 63);
     color:white;
-    height: 260px;
+    height:100%;
     
 }
 
 FOOTER FORM{    
     display: flex  ;    
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items:center;
+    justify-content: space-around;
     
    margin: 100px;
 }
@@ -171,4 +188,11 @@ footer p{
 .icone3{
     background-image: url(../ONPA/imgs/vecteezy_water-drop_1196097.png);
     background-size: cover;
+}
+
+
+.borda{
+    display: flex;
+    flex-direction: row;
+    height: 50%;
 }
