--- a/cadastro.css
+++ b/cadastro.css
@@ -74,17 +74,18 @@ header{
 }
 
 .BS{
-    background-color: rgba(0, 0, 0, 0.534);
-    font-weight: 900;
-    color: white;
-    padding: 15px 20px 10px 20px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(116, 116, 116);
+    padding: 20px 15px 5px 15px;
     margin: 20px;
-    text-transform: uppercase;
+    width: 700px;
+    height: 500;
+    padding-bottom: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content:center ;
-    
+    box-shadow:  10px 5px 10px rgba(0, 0, 0, 0.651);
 }
 
 
@@ -97,6 +98,7 @@ main{
     display: flex;
     flex-direction: column;
     background-color: orangered;
+    align-items: center;
     
 }
 
@@ -228,35 +230,25 @@ footer p{
 
 .LC{
     position: absolute;
-    top: -25px;
-    right: -20px;
+    top: 32px;
+    right: 173px;
 }
 
 .cadasF{
-    margin-top: 20px;
+    
 }
 
 .body  {
-    background: orangered; /* fallback for old browsers */
-    background: rgb(255, 92, 32);
-    background: linear-gradient(90deg, rgb(255, 112, 60) 0%, orangered 50%);
+    
+    background: url(deserto.svg);
+    background-size: cover;
+   
     font-family: "Roboto", sans-serif;
     -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;      
+    -moz-osx-font-smoothing: grayscale;  
+    display: flex;
+    padding: 30px;    
   }
 
-.dmaa{
-    background: url(cacorro-coleira.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    color: white;
-}
-
-.cards{
-    display: flex;
-    justify-content: space-around;
-}
-.cards2{
-    display: flex;
-    justify-content: space-around;
-}
+ 
+  
